<resources>
    <string name="app_name">ExpensesApp</string>
    <string name="enter_name">Enter name:</string>
    <string name="name">Name</string>
    <string name="enter_your_debt">Enter your debt:</string>
    <string name="enter_person_s_debt">Enter person\'s debt:</string>
    <string name="debt">Debt</string>
    <string name="create_entry">Create entry</string>
    <string name="name_valid">Name must be defined</string>
    <string name="amount_valid">Amount must be non-negative</string>
    <string name="debts">Debts</string>
    <string name="details">Details</string>
    <string name="user_debt" formatted="true">Your debt: %1$s</string>
    <string name="person_debt">Person\'s debt: %1$s</string>
    <string name="gap">Gap: %1$s</string>
    <string name="open_debtors_list">open persons list</string>
    <string name="balance">Balance:</string>
    <string name="delete_entry">Delete entry?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="enter_changing">Enter changing:</string>
    <string name="amount">Amount</string>
    <string name="minus">−</string>
    <string name="plus">+</string>
    <string name="out_range">Number is out of range</string>
</resources>
